--- a/lyx/slides.lyx
+++ b/lyx/slides.lyx
@@ -50,12 +50,7 @@
 \suppress_date false
 \use_refstyle 0
 \boxbgcolor #dbdbdb
-\branch answer
-\selected 1
-\filename_suffix 0
-\color #faf0e6
-\end_branch
-\branch long
+\branch 90mins
 \selected 0
 \filename_suffix 0
 \color #ffffff
@@ -170,7 +165,7 @@ Research Questions:
 
 \series bold
 What is the value of migration when there are regional and aggregate price
- fluctuations?
+ shocks?
 \end_layout
 
 \begin_layout Enumerate
@@ -718,7 +713,7 @@ Aggregate shocks affect regions to different extents.
 \end_layout
 
 \begin_layout Itemize
-Shocks to labor income / productivity of a certain industry:
+Shocks to labor income / productivity in a region:
 \end_layout
 
 \begin_deeper
@@ -739,6 +734,18 @@ at the same time, other regions experienced growth.
 \end_inset
 
 
+\end_layout
+
+\begin_layout Itemize
+Agragrian South evolved into 
+\begin_inset Quotes eld
+\end_inset
+
+New South
+\begin_inset Quotes erd
+\end_inset
+
+ / Sunbelt: growth in manufacturing attracted northern workers.
 \end_layout
 
 \end_deeper
@@ -780,25 +787,89 @@ The choice to buy or rent a home.
 
 \end_deeper
 \begin_layout Itemize
-I use SIPP micro data to estimate the parameters of the model, fitting moments
- related to migration, housing, and wealth.
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+onslide+<2->
+\end_layout
+
+\end_inset
+
+I use SIPP micro data to estimate the preference parameters of the model.
 \end_layout
 
 \begin_layout Itemize
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+onslide+<2->
+\end_layout
+
+\end_inset
+
+Estimate regional price and labor productivity models from aggregate FHFA
+ and BEA data.
+\end_layout
+
+\begin_layout Itemize
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+onslide+<3->
+\end_layout
+
+\end_inset
+
 Analyse empirically how assets and housing choice interact with migration.
 \end_layout
 
 \begin_layout Itemize
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+onslide+<4->
+\end_layout
+
+\end_inset
+
 Develop a measure of the option value of migration.
 \end_layout
 
 \begin_layout Itemize
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+onslide+<4->
+\end_layout
+
+\end_inset
+
 Analyse how policy changes may affect outcomes.
 \end_layout
 
 \begin_layout Standard
 \begin_inset Note Note
-status open
+status collapsed
 
 \begin_layout Itemize
 why do you add ownership and not something else? because more than 60% of
@@ -909,6 +980,10 @@ onslide+<3->
 What would happen to migration if government policy changed?
 \end_layout
 
+\begin_layout Standard
+\begin_inset Branch 90mins
+status collapsed
+
 \begin_layout BeginFrame
 Roadmap
 \end_layout
@@ -916,6 +991,11 @@ Roadmap
 \begin_layout Standard
 \begin_inset CommandInset toc
 LatexCommand tableofcontents
+
+\end_inset
+
+
+\end_layout
 
 \end_inset
 
@@ -988,6 +1068,10 @@ Regional Fluctuations:
 Blanchard and Katz (1992)
 \end_layout
 
+\begin_layout Standard
+\begin_inset Branch 90mins
+status open
+
 \begin_layout BeginFrame
 Related literature
 \end_layout
@@ -1033,6 +1117,11 @@ Housing demand over the lifecycle:
  (2012), and Li, Meghir and Oswald (2014)
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Section
 Empirical Facts
 \end_layout
@@ -1068,7 +1157,7 @@ Empirical Facts
 \end_layout
 
 \begin_layout BeginFrame
-Aggregate Migration Rates
+Annual Migration Rates
 \end_layout
 
 \begin_layout Itemize
@@ -1105,8 +1194,8 @@ Dropbox/data/sipp/move_rates_edit.tex}
 \begin_inset Caption
 
 \begin_layout Plain Layout
-Percent of US households who move per year.
- SIPP data, subset to 20--50 year olds.
+Percent of households.
+ SIPP data, average for 1997--2012, subset to 20--50 year olds.
 \end_layout
 
 \end_inset
@@ -1146,7 +1235,7 @@ Moves within a region are not counted as migration.
 
 \begin_layout Standard
 \begin_inset Note Note
-status open
+status collapsed
 
 \begin_layout Itemize
 As you will see, this is a very rich decision problem: people make choices
@@ -1173,6 +1262,40 @@ there is a tradeoff between level of geographic detail and other features
 \end_inset
 
 
+\begin_inset Branch 90mins
+status open
+
+\begin_layout BeginPlainFrame
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename /Users/florianoswald/Dropbox/mobility/output/data/sipp/agg_reg_p.pdf
+	height 95pheight%
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout BeginPlainFrame
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename /Users/florianoswald/Dropbox/mobility/output/data/sipp/agg_reg_y.pdf
+	height 95pheight%
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout BeginPlainFrame
@@ -1190,6 +1313,10 @@ there is a tradeoff between level of geographic detail and other features
 
 
 \end_layout
+
+\begin_layout Standard
+\begin_inset Branch 90mins
+status open
 
 \begin_layout BeginFrame
 Reasons for Moving: CPS Data
@@ -1240,11 +1367,15 @@ CPS 2013 data on main motivation of moving, conditional on a cross Division
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset Note Note
+status collapsed
+
 \begin_layout BeginFrame
 Reasons for Moving: CPS Data
 \end_layout
 
-\begin_layout Standard
+\begin_layout Plain Layout
 \begin_inset Float table
 placement p
 wide false
@@ -1288,10 +1419,6 @@ CPS 2013 data on main motivation of moving, conditional on a cross Division
 
 
 \end_layout
-
-\begin_layout Standard
-\begin_inset Note Note
-status open
 
 \begin_layout BeginFrame
 Reasons for Moving II: SIPP Data
@@ -1361,6 +1488,11 @@ Summary of empirical facts
 \end_layout
 
 \begin_layout Enumerate
+Regional labor productivity and house price vary differently with aggregate
+ states.
+\end_layout
+
+\begin_layout Enumerate
 Renters move at more than double the rate of owners.
 \end_layout
 
@@ -1368,109 +1500,6 @@ Renters move at more than double the rate of owners.
 Younger people move more, with the renter--owner gap persistent at all ages.
 \end_layout
 
-\begin_layout Standard
-\begin_inset Branch long
-status collapsed
-
-\begin_layout BeginFrame
-Regional Shocks: House Prices
-\end_layout
-
-\begin_layout Standard
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-hspace*{-2pt}
-\backslash
-makebox[
-\backslash
-linewidth][c]{%
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset Graphics
-	filename /Users/florianoswald/Dropbox/mobility/output/data/FHFA/bydiv.pdf
-	width 115text%
-	height 90theight%
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout BeginFrame
-Regional Shocks: Wages
-\end_layout
-
-\begin_layout Itemize
-
-\series bold
-North Dakota Oil Boom
-\series default
-: Discovery of Parshall Oil Field in 2006 heralds strong job growth.
- State climbes from rank 38 in the 2001 GDP per capita distribution to a
- level of GDP which is 29% above US average in 2013.
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-vspace{1cm}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Itemize
-
-\series bold
-Rust Belt Decline
-\series default
-: Several decades into the decline of the automobile industry, population
- change from 2000--2012 was
-\end_layout
-
-\begin_deeper
-\begin_layout Itemize
--26.6% in Detroit, Michigan
-\end_layout
-
-\begin_layout Itemize
--23% in Gary, Indiana
-\end_layout
-
-\begin_layout Itemize
--20% in Youngstown, Ohio
-\end_layout
-
-\end_deeper
 \end_inset
 
 
@@ -1523,8 +1552,8 @@ Model Outline I
 \begin_inset Formula $p_{dt}$
 \end_inset
 
- and labor productivity 
-\begin_inset Formula $\overline{y}_{dt}$
+ and labor productivity index 
+\begin_inset Formula $q_{dt}$
 \end_inset
 
 .
@@ -1549,6 +1578,30 @@ Migration: in each period, compare utilities across regions and choose location
 
 \begin_layout BeginFrame
 Model Outline II
+\end_layout
+
+\begin_layout Standard
+\begin_inset Note Note
+status open
+
+\begin_layout Plain Layout
+here are important observed and unobserved factors that affect behaviour
+ in the model.
+\end_layout
+
+\begin_layout Itemize
+F: as you can see, this is a very high dimensionla problem.
+ the way I attack this is to assume that there are 2 aggregate factors
+\end_layout
+
+\begin_layout Itemize
+I assume a model for people's beliefs about the evolution of those factors
+ and how they relate to regional state variables.
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -1642,7 +1695,7 @@ idiosyncratic income shock
 \begin_inset Text
 
 \begin_layout Plain Layout
-household size
+household size: children present?
 \end_layout
 
 \end_inset
@@ -1795,6 +1848,64 @@ Choice variables:
 \end_layout
 
 \begin_layout BeginFrame
+From national factors to regional prices: 
+\begin_inset Formula $\mathbf{F}\rightarrow\left[q_{dt},p_{dt}\right]$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+Aggregate factor 
+\begin_inset Formula $\mathbf{F}_{t}\equiv\left[Q_{t},P_{t}\right]$
+\end_inset
+
+ follows a stationary VAR(1).
+\end_layout
+
+\begin_layout Itemize
+Regional state variables 
+\begin_inset Formula $q_{dt}$
+\end_inset
+
+ and 
+\begin_inset Formula $p_{dt}$
+\end_inset
+
+ are functions of 
+\begin_inset Formula $\mathbf{F}_{t}$
+\end_inset
+
+:
+\begin_inset Formula 
+\[
+\left[q_{dt},p_{dt}\right]=g_{d}\left(\mathbf{F}_{t}\right)
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+Factor model 
+\begin_inset Formula $g_{d}$
+\end_inset
+
+ implies that different regions are affected to different extent by aggregate
+ shocks.
+\end_layout
+
+\begin_layout Itemize
+Parametric restriction which fits the data well.
+ 
+\end_layout
+
+\begin_layout Itemize
+This allows for identification and reduces dimension to assist with tractability.
+\end_layout
+
+\begin_layout BeginFrame
 Choice Problem
 \end_layout
 
@@ -1862,7 +1973,7 @@ The housing and savings problem solves:
 \begin_inset Formula 
 \begin{eqnarray*}
 v_{t}\left(x_{it},d'\right) & = & \max_{c_{it}>0,h_{it}\in\left\{ 0,1\right\} }u(c_{it},h_{it},d_{it},d')\\
- &  & +\beta\mathbb{E}_{z,s,\mathbf{F}}\left[\overline{v}_{t+1}\left(x_{it+1}\right)|z_{it},s_{it},\mathbf{F}_{t}\right]\\
+ & + & \beta\mathbb{E}_{z,s,\mathbf{F}}\left[\overline{v}_{t+1}\left(x_{it+1}\right)|z_{it},s_{it},\mathbf{F}_{t}\right]\\
 s.t. &  & \text{budget constraints}
 \end{eqnarray*}
 
@@ -1894,6 +2005,10 @@ s.t. &  & \text{budget constraints}
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset Branch 90mins
+status open
+
 \begin_layout BeginFrame
 Preferences
 \end_layout
@@ -1912,7 +2027,7 @@ consumption
 \end_layout
 
 \begin_layout Itemize
-household size 
+children present 
 \begin_inset Formula $(s)$
 \end_inset
 
@@ -2204,6 +2319,72 @@ Proportional cost of selling the house:
 .
 \end_layout
 
+\begin_layout Standard
+\begin_inset Note Note
+status open
+
+\begin_layout Plain Layout
+key frictions in housing:
+\end_layout
+
+\begin_layout Itemize
+indivisible asset
+\end_layout
+
+\begin_layout Itemize
+downpayment constraint
+\end_layout
+
+\begin_layout Plain Layout
+house quality:
+\end_layout
+
+\begin_layout Enumerate
+it is a common assumption to discretize the size of houses in order to simplify
+ the problem.
+\end_layout
+
+\begin_layout Enumerate
+here downsizing means movign to renter or to cheaper region.
+\end_layout
+
+\begin_layout Enumerate
+it is an interesting question because it relates to how important utility
+ from housing is in the utility function.
+ there is no clear answer to this yet.
+ future work.
+\end_layout
+
+\begin_layout Plain Layout
+bankruptcy / default:
+\end_layout
+
+\begin_layout Itemize
+another insurance device tht differs from migration.
+ 
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+yes, i have a paper with c.
+ meghir where we look in detail at this mechanism, however there is migraiton
+\end_layout
+
+\begin_layout Itemize
+the main problem here is that neither default nor bankruptcy is measure
+ in the data.
+\end_layout
+
+\begin_layout Itemize
+it would be interesting to have both in a model.
+\end_layout
+
+\end_deeper
+\end_inset
+
+
+\end_layout
+
 \begin_layout BeginFrame
 Labor Income
 \end_layout
@@ -2226,7 +2407,7 @@ Define the price of human capital by
 \end_layout
 
 \begin_layout Itemize
-\begin_inset Formula $\overline{y}_{dt}$
+\begin_inset Formula $q_{dt}$
 \end_inset
 
  is an index of regional labor productivity.
@@ -2239,7 +2420,7 @@ Individual income is defined by:
 \begin_layout Standard
 \begin_inset Formula 
 \begin{eqnarray*}
-\ln y_{idt} & = & \eta_{d}\ln\overline{y}_{dt}+f(t)+z_{it}\\
+\ln y_{idt} & = & \eta_{d}\ln q_{dt}+f(t)+z_{it}\\
 z_{it} & = & \rho z_{it-1}+e_{it-1}\\
 e & \sim & N(0,\sigma^{2})
 \end{eqnarray*}
@@ -2268,11 +2449,15 @@ Job Search: Labor income of movers
 \end_layout
 
 \begin_layout Itemize
-Individuals who move to 
+People have to move to 
 \begin_inset Formula $d'$
 \end_inset
 
- can predict deterministic part of income: 
+ in order to discover exact value of new income.
+\end_layout
+
+\begin_layout Itemize
+They can predict deterministic part of income: 
 \family roman
 \series medium
 \shape up
@@ -2287,7 +2472,7 @@ Individuals who move to
 
 \begin_inset Formula 
 \[
-\eta_{d'}\ln\overline{y}_{d't+1}+f(t+1)
+\eta_{d'}\ln q_{d't+1}+f(t+1)
 \]
 
 \end_inset
@@ -2311,59 +2496,44 @@ Movers get a new draw
 .
 \end_layout
 
-\begin_layout BeginFrame
-National factors and regional prices
-\end_layout
+\begin_layout Standard
+\begin_inset Note Note
+status open
 
 \begin_layout Itemize
-Aggregate factor 
-\begin_inset Formula $\mathbf{F}_{t}\equiv\left[Y_{t},P_{t}\right]$
-\end_inset
-
- follows a stationary VAR(1).
-\end_layout
-
-\begin_layout Itemize
-Regional state variables 
-\begin_inset Formula $\overline{y}_{dt}$
-\end_inset
-
- and 
-\begin_inset Formula $p_{dt}$
-\end_inset
-
- are functions of 
-\begin_inset Formula $\mathbf{F}_{t}$
-\end_inset
-
-:
-\begin_inset Formula 
-\[
-\left[\overline{y}_{dt},p_{t}\right]=g_{d}\left(\mathbf{F}_{t}\right)
-\]
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Itemize
-Factor model 
-\begin_inset Formula $g_{d}$
-\end_inset
-
- implies that different regions are affected to different extent by aggregate
- shocks.
-\end_layout
-
-\begin_layout Itemize
-Parametric restriction which fits the data well.
+i assume offers do not affect moving because households don't learn about
+ offer until after move.
+ Current wages do affect movers, I allow the offer to depend on current
+ z.
+ But because I observe z(t) and condition on it there is no selection problem
+ by assumption.
  
 \end_layout
 
 \begin_layout Itemize
-This allows for identification and reduces dimension to assist with tractability.
+I am aware that this is potentially a problem.
+ In theory I can account for it by estimating the wage process inside the
+ model.
+ There are some natural exlcusion restrictions implied from the model.
+ (variables that affect moving but not future wages).
+ However, small sample of movers, potentially hard to identify.
+ I plan to investigate this further.
+ 
 \end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Branch 90mins
+status open
 
 \begin_layout BeginFrame
 Budget Constraint: Renters who decide to stay
@@ -2612,6 +2782,15 @@ a_{it+1}=(1+r)\left(a_{it}+y_{idt}-c_{it}+(1-\phi)p_{dt}-p_{d't}\right)
 \end_layout
 
 \end_deeper
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Branch 90mins
+status open
+
 \begin_layout Section
 Solution and Estimation
 \end_layout
@@ -2706,8 +2885,10 @@ onslide+<2->
 \end_inset
 
 
-\color green
+\series bold
+\color black
 unconditional value
+\series default
 \color inherit
  of moving from 
 \begin_inset Formula $d$
@@ -2718,9 +2899,12 @@ unconditional value
 \end_inset
 
 
+\series bold
+\color black
+
 \begin_inset Formula 
 \begin{eqnarray*}
-{\color{green}v_{d}\left(x_{it},d'\right)} & = & \max\left({\color{blue}v_{d}^{\text{own}}\left(x_{it},d'\right)},{\color{red}v_{d}^{\text{rent}}\left(x_{it},d'\right)}\right)
+{\color{black}{\color{green}{\color{black}v_{d}\left(x_{it},d'\right)}}} & = & \max\left({\color{blue}v_{d}^{\text{own}}\left(x_{it},d'\right)},{\color{red}v_{d}^{\text{rent}}\left(x_{it},d'\right)}\right)
 \end{eqnarray*}
 
 \end_inset
@@ -2737,16 +2921,16 @@ Solving the Model
 \begin_inset Formula 
 \[
 \text{for all }d=1,\dots,9:\,\,\,\begin{cases}
-{\color{green}v_{d}\left(x_{it},1\right)}=\max & \begin{cases}
+{\color{green}{\color{black}v_{d}\left(x_{it},1\right)}}=\max & \begin{cases}
 {\color{blue}v_{1}^{\text{own}}\left(x_{it},d'\right)}\\
 {\color{red}v_{1}^{\text{rent}}\left(x_{it},d'\right)}
 \end{cases}\\
-{\color{green}v_{d}\left(x_{it},2\right)}=\max & \begin{cases}
+{\color{green}{\color{black}v_{d}\left(x_{it},2\right)}}=\max & \begin{cases}
 {\color{blue}v_{2}^{\text{own}}\left(x_{it},d'\right)}\\
 {\color{red}v_{2}^{\text{rent}}\left(x_{it},d'\right)}
 \end{cases}\\
 \vdots & \vdots\\
-{\color{green}v_{d}\left(x_{it},9\right)}=\max & \begin{cases}
+{\color{green}{\color{black}v_{d}\left(x_{it},9\right)}}=\max & \begin{cases}
 {\color{blue}v_{9}^{\text{own}}\left(x_{it},d'\right)}\\
 {\color{red}v_{9}^{\text{rent}}\left(x_{it},d'\right)}
 \end{cases}
@@ -2761,7 +2945,7 @@ Solving the Model
 \begin_layout Standard
 \begin_inset Formula 
 \[
-V\left(x_{it},\varepsilon\right)=\max_{d'\in D}\left\{ {\color{green}v\left(x_{it},d'\right)}+\varepsilon_{id'}\right\} 
+V\left(x_{it},\varepsilon\right)=\max_{d'\in D}\left\{ {\color{green}{\color{black}v\left(x_{it},d'\right)}}+\varepsilon_{id'}\right\} 
 \]
 
 \end_inset
@@ -2809,6 +2993,11 @@ there are 18 optimization problems at point
 : Solving the model once requires solving 25,380,000 maximization problems.
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout BeginFrame
 Estimation Outline
 \end_layout
@@ -2827,21 +3016,30 @@ Match moments predicted by the structural model to moments in SIPP, using
  SMM.
 \end_layout
 
+\begin_layout Standard
+\begin_inset Branch 90mins
+status collapsed
+
 \begin_layout BeginFrame
 Data: SIPP
 \end_layout
 
 \begin_layout Itemize
+Micro data:
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
 Use the 1996, 2001, 2004 and 2008 SIPP panels.
 \end_layout
 
 \begin_layout Itemize
-102,529 unique individuals, 2684 cross-Division moves
+102,529 unique individuals, 2684 cross-Division moves.
 \end_layout
 
 \begin_layout Itemize
 construct moments as averages over 1997--2012 to obtain reasonable sample
- size in conditioning cells
+ size in conditioning cells.
 \end_layout
 
 \begin_layout Itemize
@@ -2850,16 +3048,23 @@ Use a cohort estimator: accounts for fact that different cohorts faced different
  
 \end_layout
 
+\end_deeper
 \begin_layout Itemize
-Use BEA personal income by state to get regional GDP/capita.
+Macro data:
+\end_layout
+
+\begin_deeper
+\begin_layout Itemize
+BEA personal income by state to get regional GDP/capita.
 \end_layout
 
 \begin_layout Itemize
-FHFA house price index for prices.
+FHFA for regional house price indeces.
 \end_layout
 
-\begin_layout BeginFrame
-VAR predictions for regional house prices
+\end_deeper
+\begin_layout BeginPlainFrame
+
 \end_layout
 
 \begin_layout Standard
@@ -2874,11 +3079,7 @@ VAR predictions for regional house prices
 
 \end_layout
 
-\begin_layout BeginFrame
-VAR predictions for regional productivity index 
-\begin_inset Formula $\overline{y}_{dt}$
-\end_inset
-
+\begin_layout BeginPlainFrame
 
 \end_layout
 
@@ -3380,43 +3581,6 @@ L(\theta)=\frac{1}{K}\left[m-\hat{m}(\theta)\right]^{T}W\left[m-\hat{m}(\theta)\
  is model counterpart
 \end_layout
 
-\begin_layout Standard
-\begin_inset Note Note
-status collapsed
-
-\begin_layout Plain Layout
-explain MCMC
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout BeginFrame
-Parameter estimates
-\end_layout
-
-\begin_layout Standard
-\noindent
-\align center
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-input{
-\backslash
-Dropbox/model/fit/params-pres.tex}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
 \begin_layout BeginFrame
 Moments
 \end_layout
@@ -3519,6 +3683,24 @@ h_{it-1}=\beta_{0,h}+\beta_{1,h}t_{it}+\beta_{2,h}t_{it}^{2}+u_{it}
 \end_layout
 
 \end_deeper
+\begin_layout Standard
+\begin_inset Note Note
+status collapsed
+
+\begin_layout Plain Layout
+explain MCMC
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout BeginFrame
 Model Fit
 \end_layout
@@ -3573,6 +3755,47 @@ status open
 
 
 \end_layout
+
+\begin_layout Standard
+\begin_inset Note Note
+status collapsed
+
+\begin_layout Plain Layout
+why are moving costs so large?
+\end_layout
+
+\begin_layout Itemize
+because moves are rare in the data.
+ these large numbers are the model mechanism to deter too many moves.
+\end_layout
+
+\begin_layout Itemize
+large costs do not refer to moves that are actually made, but rather hypothetica
+l moves to arbitray location.
+ people in the model only move if payoff shocks are favourable and there
+ is a net gain from moving.
+\end_layout
+
+\begin_layout Itemize
+think of the large moving cost as the amount of money you would be willing
+ to pay to avoid having to participate in a lottery where you have to draw
+ a random location to which you will be forced to move.
+\end_layout
+
+\begin_layout Itemize
+it is possible to estimate the moving cost for an actual mover.
+ Kennan shows how to do this within their model, should be able to do the
+ same thing here
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Branch 90mins
+status collapsed
 
 \begin_layout BeginFrame
 Model Fit II
@@ -3877,7 +4100,7 @@ Properties of the model
 \end_layout
 
 \begin_layout BeginFrame
-Properties: Probability of migrating by assets
+Properties: Probability of migrating by wealth
 \end_layout
 
 \begin_layout Standard
@@ -3888,7 +4111,7 @@ status open
 
 
 \backslash
-hspace*{-2pt}
+hspace*{1pt}
 \backslash
 makebox[
 \backslash
@@ -3904,8 +4127,8 @@ linewidth][c]{%
 \noindent
 \align left
 \begin_inset Graphics
-	filename /Users/florianoswald/Dropbox/mobility/output/model/properties/mp_assets.pdf
-	scale 80
+	filename /Users/florianoswald/Dropbox/mobility/output/model/properties/mp_wealth2.pdf
+	scale 75
 
 \end_inset
 
@@ -3934,17 +4157,13 @@ status open
 Properties I: Moving Costs
 \end_layout
 
-\begin_layout Itemize
-Moving cost for young mover in Kennan and Walker (2011): $384,000
-\end_layout
-
 \begin_layout Standard
 \noindent
 \align center
 \begin_inset Float table
 wide false
 sideways false
-status collapsed
+status open
 
 \begin_layout Plain Layout
 \noindent
@@ -3966,62 +4185,13 @@ Dropbox/model/experiments/moneyMC/moneyMC2.tex}
 
 \end_layout
 
-\begin_layout Plain Layout
-\begin_inset Caption
-
-\begin_layout Plain Layout
-Moving cost for owners and renters at state 
-\begin_inset Formula $a=0,z=z_{1},P=\bar{P},Y=\bar{Y}$
-\end_inset
-
- in the first period of life.
-\end_layout
-
 \end_inset
 
 
 \end_layout
 
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset Note Note
-status open
-
-\begin_layout Plain Layout
-why are moving costs so large?
-\end_layout
-
 \begin_layout Itemize
-because moves are rare in the data.
- these large numbers are the model mechanism to deter too many moves.
-\end_layout
-
-\begin_layout Itemize
-large costs do not refer to moves that are actually made, but rather hypothetica
-l moves to arbitray location.
- people in the model only move if payoff shocks are favourable and there
- is a net gain from moving.
-\end_layout
-
-\begin_layout Itemize
-think of the large moving cost as the amount of money you would be willing
- to pay to avoid having to participate in a lottery where you have to draw
- a random location to which you will be forced to move.
-\end_layout
-
-\begin_layout Itemize
-it is possible to estimate the moving cost for an actual mover.
- Kennan shows how to do this within their model, should be able to do the
- same thing here
-\end_layout
-
-\end_inset
-
-
+Moving cost for young mover in Kennan and Walker (2011): $384,000
 \end_layout
 
 \begin_layout BeginFrame
@@ -4079,20 +4249,6 @@ or because of transaction costs
 \end_layout
 
 \end_deeper
-\begin_layout Itemize
-Owners are more likely to be of high moving cost type:
-\end_layout
-
-\begin_deeper
-\begin_layout Itemize
-Pr( High Type | own ) = 69% 
-\end_layout
-
-\begin_layout Itemize
-Pr( High Type | rent ) = 65%
-\end_layout
-
-\end_deeper
 \begin_layout Standard
 \begin_inset Float table
 wide false
@@ -4124,8 +4280,25 @@ Dropbox/model/experiments/HC_friction/decompose.tex}
 
 \end_layout
 
+\begin_layout Itemize
+Transaction cost 
+\begin_inset Formula $\phi$
+\end_inset
+
+ is important as well (not only utility cost 
+\begin_inset Formula $\alpha_{3}$
+\end_inset
+
+).
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout BeginFrame
-Impulse responses to large regional shocks
+Effect of large regional shocks
 \end_layout
 
 \begin_layout Itemize
@@ -4134,15 +4307,15 @@ Reduce observed house price or mean income in West North Central in 2000
 
 \begin_deeper
 \begin_layout Itemize
-reduce 
-\begin_inset Formula $\overline{y}_{dt}$
+reduce regional labor productivity 
+\begin_inset Formula $q_{dt}$
 \end_inset
 
  by 10%
 \end_layout
 
 \begin_layout Itemize
-reduce 
+reduce regional house price 
 \begin_inset Formula $p_{dt}$
 \end_inset
 
@@ -4159,7 +4332,7 @@ Look at changes in in/outflow
 \end_layout
 
 \begin_layout BeginFrame
-Sudden change in income level in WNC
+Sudden change in regional labor productivity in WNC
 \end_layout
 
 \begin_layout Standard
@@ -4197,7 +4370,7 @@ Dropbox/model/experiments/exp_yp/WNCyshock_pres.tex}
 \end_layout
 
 \begin_layout BeginFrame
-Mean Income shock in WNC
+Labor productivity shock in WNC
 \end_layout
 
 \begin_layout Standard
@@ -4246,7 +4419,7 @@ status open
 \end_layout
 
 \begin_layout BeginFrame
-Mean Income shock in WNC
+Labor productivity shock in WNC
 \end_layout
 
 \begin_layout Standard
@@ -4469,7 +4642,11 @@ Value of the migration option
 \end_layout
 
 \begin_layout Itemize
-How valuable in terms of expected lifetime utility is the option to move?
+Migration flows are small, regional shocks are big.
+\end_layout
+
+\begin_layout Itemize
+Is migration important?
 \end_layout
 
 \begin_layout Itemize
@@ -4756,6 +4933,10 @@ vspace{1cm}
 Abolishing the Mortgage Interest Deduction
 \end_layout
 
+\begin_layout Standard
+\begin_inset Branch 90mins
+status open
+
 \begin_layout BeginFrame
 Mortgage Interest Deduction
 \end_layout
@@ -4787,6 +4968,11 @@ Big tax expenditure: $72 billion in 2014.
 Economic rationale for the deduction is not clear.
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout BeginFrame
 Abolishing the Mortgage Interest Deduction
 \end_layout
@@ -4811,6 +4997,10 @@ Use results from stationary GE model by Sommer and Sullivan (2013): 5% reduction
  prices
 \end_layout
 
+\begin_layout Standard
+\begin_inset Branch 90mins
+status open
+
 \begin_layout BeginFrame
 Sommer and Sullivan (2013)
 \end_layout
@@ -4829,6 +5019,11 @@ lower prices allow more low-wealth households to buy (lower downpayment).
 
 \begin_layout Itemize
 Rents stay constant.
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout BeginFrame
@@ -4854,70 +5049,6 @@ Adjust rent-to-price ratios
 \end_inset
 
  so that rent stays constant.
-\end_layout
-
-\begin_layout Standard
-\begin_inset Float table
-placement h
-wide false
-sideways false
-status open
-
-\begin_layout Plain Layout
-\noindent
-\align center
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-hspace*{-2pt}
-\backslash
-makebox[
-\backslash
-linewidth][c]{%
-\end_layout
-
-\begin_layout Plain Layout
-
-
-\backslash
-input{
-\backslash
-Dropbox/model/data_repo/out_data_jl/sinai-pres.tex}
-\end_layout
-
-\begin_layout Plain Layout
-
-}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout BeginFrame
-Net Present Value of Deduction
-\end_layout
-
-\begin_layout Standard
-\noindent
-\align center
-\begin_inset Graphics
-	filename /Users/florianoswald/Dropbox/mobility/output/model/experiments/MortgageSubsidy/npv.pdf
-	scale 60
-
-\end_inset
-
-
 \end_layout
 
 \begin_layout BeginFrame
@@ -5041,7 +5172,7 @@ The migration option has a large value
 \end_layout
 
 \begin_layout Enumerate
-Homeownership is an important factor in a migration model
+Homeownership: important
 \end_layout
 
 \begin_deeper
@@ -5056,15 +5187,14 @@ affects response to shocks
 \end_deeper
 \begin_layout Enumerate
 Abolishing the mortgage interest deduction has a small positive impact on
- migration 
+ migration and a large welfare impact
 \end_layout
 
 \end_deeper
-\begin_layout Itemize
-To do:
+\begin_layout BeginFrame
+To do
 \end_layout
 
-\begin_deeper
 \begin_layout Itemize
 amenities (regional fixed effect)
 \end_layout
@@ -5078,7 +5208,102 @@ relax restrictions of factor model (trends?, three agg.
  factors?)
 \end_layout
 
-\end_deeper
+\begin_layout Itemize
+income model
+\end_layout
+
+\begin_layout BeginFrame
+Parameter estimates
+\end_layout
+
+\begin_layout Standard
+\noindent
+\align center
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+input{
+\backslash
+Dropbox/model/fit/params-pres.tex}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout BeginFrame
+Raising Tax for Owners
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float table
+placement h
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\noindent
+\align center
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+hspace*{-2pt}
+\backslash
+makebox[
+\backslash
+linewidth][c]{%
+\end_layout
+
+\begin_layout Plain Layout
+
+
+\backslash
+input{
+\backslash
+Dropbox/model/data_repo/out_data_jl/sinai-pres.tex}
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout BeginFrame
+Net Present Value of Deduction
+\end_layout
+
+\begin_layout Standard
+\noindent
+\align center
+\begin_inset Graphics
+	filename /Users/florianoswald/Dropbox/mobility/output/model/experiments/MortgageSubsidy/npv.pdf
+	scale 60
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout EndFrame
 
 \end_layout
